syntax = "proto3";

option csharp_namespace = "EnrollmentService.Application";

package enrollments;

service Enrollments {
  rpc CountEnrollmentsForCourse (CountEnrollmentsForCourseRequest) returns (CountEnrollmentsForCourseResponse);
}

message CountEnrollmentsForCourseRequest {
  string courseId = 1;
}

message CountEnrollmentsForCourseResponse {
  int32 numberOfEnrollments = 1;
}